packages/jsii/test/negatives/neg.property-name.5.ts
///!MATCH_ERROR: Properties cannot have names like putInXxx() - those conflict with Java collection builder convenience methods

export interface MyStruct {
    readonly putInFoo?: number;
}
